# fastapi-migrations

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
fastapi_migrations/: __init__.py  cli.py  lib.py
fastapi_migrations/templates/default/: alembic.ini.mako  env.py
fastapi_migrations/templates/default_async/: alembic.ini.mako  env.py
tests/: fixtures.py  test_config.py  test_imports.py  test_programatic_commands.py
